Fix prompt save button bug change z-index to 1

--- a/src/components/UserProfile/UserProfile.scss
+++ b/src/components/UserProfile/UserProfile.scss
@@ -100,10 +100,16 @@
 
 .prompt {
 	display: flex;
-	flex-direction: column;
+	flex-direction: row;
 	border: 0.063rem solid $secondary-dark;
 	border-radius: 0.25rem;
 	padding: 0.5rem;
+
+	&__container {
+		display: flex;
+		flex-direction: column;
+		flex-grow: 1;
+	}
 
 	&__title {
 		color: $secondary-dark;
