--- a/src/pages/IdeaDetailsPage/IdeaDetailsPage.scss
+++ b/src/pages/IdeaDetailsPage/IdeaDetailsPage.scss
@@ -57,9 +57,10 @@
 	}
 
 	&__button {
-		position: absolute;
-		right: 1rem;
-		top: 0.5rem;
+		z-index: 0;
+		// position: absolute;
+		// right: 1rem;
+		// top: 0.5rem;
 	}
 }
 
@@ -101,7 +102,7 @@
 	&__save {
 		height: 3rem;
 		width: 3rem;
-		z-index: 2;
+		z-index: 1;
 
 		&--disabled {
 			filter: grayscale(1);
